syntax = "proto3";

package signuppb;

import "google/protobuf/empty.proto";

service SignupService{
    rpc Signup(AccountInformation) returns (google.protobuf.Empty) {}
}

message AccountInformation{
        string firstName  = 1;
        string lastName = 2;
        string email = 3 ;
        string password = 5;
    }